--- a/src/components/post/post.css
+++ b/src/components/post/post.css
@@ -5,25 +5,25 @@
   display: flex;
   flex-direction: column;
 }
-.postCard {
-  display: flex;
-  flex-direction: column;
-  border-radius: 12px;
-  padding-bottom: 1rem;
-  box-shadow: var(--boxShadow);
-  padding: 1rem 12px;
-}
-@media only screen and (max-width: 1150px){
+@media only screen and (max-width: 1225px){
   .post{
     width: auto;
   }
 }
-@media only screen and (max-width: 500px){
+@media only screen and (max-width: 800px){
   .post{
     width: 100%;
     margin: 0 0 40px 0;
   }
 }
+.postCard {
+  display: flex;
+  flex-direction: column;
+  border-radius: 12px;
+  box-shadow: var(--boxShadow);
+  padding: 1rem 12px;
+}
+
 .postImg {
   height: 280px;
   object-fit: cover;
@@ -86,7 +86,7 @@
 }
 .mRB{
   width: 100%;
-  margin-top: 1rem;
+  margin: 1rem 0;
   justify-content: center;
   align-items: center;
   display: flex;
