--- a/src/components/topbar/topbar.css
+++ b/src/components/topbar/topbar.css
@@ -13,7 +13,7 @@
   font-family: "Josefin Sans", sans-serif;
   
 }
-@media only screen and (max-width: 500px) {
+@media only screen and (max-width: 800px) {
   .top{
     /* flex-direction: column; */
     height: 50px;
@@ -32,16 +32,38 @@
 .topRight {
     flex: 1;
     display: flex;
-    justify-content: flex-start;
+    justify-content: flex-end;
     align-items: center;
-    padding-left: 12px;
+    margin-right: 12px;
+    border-radius: 16px;
 }
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 800px) {
 .topRight {
-  justify-content: flex-end;
+  flex: 0;
   margin: 0 5px 0 0;
 }
+
+@media only screen and (max-width: 800px) {
+  .topRight1{
+    display: none;
+  }}
 }
+.rMain{
+  background: #efefef;
+  display: flex;
+  border-radius: 16px;
+}
+.rMain > label{
+  display: flex;
+  align-items: center;
+  margin-left: 10px;
+}
+/* .divH{
+  flex:1;
+  justify-content: flex-end;
+
+
+} */
 .topIcon {
   font-size: 20px;
   color: white;
@@ -54,9 +76,14 @@
   transition: all .3s ease-in-out;
 }
 
-/* .topCenter {
+.topCenter {
   flex: 6;
-} */
+}
+@media only screen and (max-width: 800px) {
+.topCenter{
+  display: none;
+}
+}
 
 .topList {
   display: flex;
@@ -66,7 +93,7 @@
   list-style: none;
 }
 
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 800px) {
   .topList{
     display: none;
   }
@@ -101,24 +128,25 @@
   display: flex;
   margin: 10px 40px 10px 0;
 }
-@media only screen and (max-width: 500px) {
+@media only screen and (max-width: 800px) {
   .search{
     display: none;
   }}
 .searchB{
-  flex: 1.9;
+  /* flex: 1.9; */
   outline: none;
   border: none;
-  width: 15rem;
+  /* width: 15rem; */
   padding:10px;
-  background-color: rgb(233, 233, 241);
-  border-radius: 4px;
+  background-color: transparent;
 }
 .btn{
-  flex: 0.1;
+  flex: 0.1 1;
   border: none;
-  background-color: rgb(233, 233, 241);
-  border-radius: 4px;
+  background-color: transparent;
+  justify-content: space-around;
+  align-items: center;
+  display: flex;
 }
 @media screen and (max-width: 500px) {
   .search{
