--- a/src/components/topbar/topbar.css
+++ b/src/components/topbar/topbar.css
@@ -98,8 +98,12 @@
 }
 
 .search{
+  background-color: white;
   display: flex;
-  margin: 10px 40px 10px 0;
+  justify-content: space-between;
+  border: 1px solid lightgray;
+  margin-right: 12px;
+  border-radius: 21px;
 }
 @media only screen and (max-width: 500px) {
   .search{
@@ -112,13 +116,15 @@
   width: 15rem;
   padding:10px;
   background-color: rgb(233, 233, 241);
-  border-radius: 4px;
+  border-radius: 21px 0 0 21px;
+
 }
 .btn{
   flex: 0.1;
   border: none;
   background-color: rgb(233, 233, 241);
-  border-radius: 4px;
+  padding-right: 12px;
+  border-radius: 0 21px 21px 0;
 }
 @media screen and (max-width: 500px) {
   .search{
