--- a/src/components/post/post.css
+++ b/src/components/post/post.css
@@ -62,14 +62,14 @@
   cursor: pointer;
 }
 
-.postDate {
+/* .postDate {
   font-family: "Lora", serif;
   font-style: italic;
   font-size: 13px;
   font-weight: 400;
   color: #999999;
   margin-top: 15px;
-}
+} */
 
 .postDesc {
   font-family: "Varela Round", Arial, Helvetica, sans-serif;
